src/main/default/objects/DNBI__dnb_Mapping_Information__c/DNBI__dnb_Mapping_Information__c.object-meta.xml
<CustomObject>
    <label>dnb Mapping Information</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>dnb Mapping Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>dnb Mapping Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>