src/main/default/objects/DNBI__dnb_Mapping_Information__c/fields/DNBI__Entity_Field__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Entity_Field__c</fullName>
    <description>Fields name of Sobject (Account,Lead or Opportunity )</description>
    <label>Entity Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>