src/main/default/objects/DNBI__dnb_Mapping_Information__c/fields/DNBI__Entity_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Entity_Field_Label__c</fullName>
    <label>Entity Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>