src/main/default/objects/DNBI__dnb_Mapping_Information__c/fields/DNBI__Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Entity_Type__c</fullName>
    <description>Type of Sobject e.g. Account, lead or Opportunity</description>
    <label>Entity Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>