src/main/default/objects/DNBI__dnb_Mapping_Information__c/fields/DNBI__isDefaultMapping__c.field-meta.xml
<CustomField>
    <fullName>DNBI__isDefaultMapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDefaultMapping</label>
    <type>Checkbox</type>
</CustomField>