src/main/default/objects/DNBI__dnb_Mapping_Information__c/fields/DNBI__isRequired__c.field-meta.xml
<CustomField>
    <fullName>DNBI__isRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRequired</label>
    <type>Checkbox</type>
</CustomField>