src/main/default/objects/DNBI__dnb_Mapping_Information__c/fields/DNBI__Selected_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Selected_Entity_Type__c</fullName>
    <label>Selected Entity Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>