src/main/default/objects/DNBI__dnb_Mapping_Information__c/fields/DNBI__WebService_DataType__c.field-meta.xml
<CustomField>
    <fullName>DNBI__WebService_DataType__c</fullName>
    <label>WebService DataType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>