src/main/default/objects/DNBI__dnb_Mapping_Information__c/fields/DNBI__WebServiceField__c.field-meta.xml
<CustomField>
    <fullName>DNBI__WebServiceField__c</fullName>
    <description>Information about webservice fields from applyFor CreditEnhancement webservice</description>
    <label>WebServiceField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>