src/main/default/objects/DNBI__dnb_Mapping_Information__c/fields/DNBI__WebServiceLabel__c.field-meta.xml
<CustomField>
    <fullName>DNBI__WebServiceLabel__c</fullName>
    <label>WebServiceLabel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>